BajiDeveloperEdition/src/objects/Item__c.object
<CustomObject>
    <description>It is a Custom object which can store Items.</description>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_invoice__c</fullName>
        <label>Shipping_invoice</label>
        <referenceTo>Shipping_Invoice__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>